# stockland_Agent

./: .gitignore  check_render_data.py  clear_redis.py  pyproject.toml  requirements.txt
backend/: test_db.py
backend/app/: main.py
backend/app/agents/: agent_graph.py  agent_graph_builder.py  stockland_agent.py  tools.py
backend/app/agents/memory/: conversation_memory.py
backend/app/agents/nodes/: ads_node.py  communities_node.py  (+10 more)
backend/app/core/: embedding_model.py  llm_client.py  logger.py  redis_cache.py  reranker_model.py
backend/app/database/: connection.py
backend/app/repositories/: ads_repository.py  home_repository.py  interest_repository.py  location_repository.py  news_repository.py  release_repository.py  semantic_cache_repository.py  vector_repository.py
backend/app/scrapers/: ads_scraper.py  community_scraper.py  homes_scraper.py  news_scraper.py  release_scraper.py  state_scraper.py
backend/app/services/: ads_service.py  community_service.py  context_service.py  embedding_service.py  home_service.py  intent_service.py  interest_service.py  location_service.py  news_service.py  release_service.py  report_data_service.py  report_service.py  reranker_service.py  search_service.py
backend/pipelines/: weekly_update_pipeline.py
backend/scripts/: create_tables.py  generate_ads_embeddings.py  generate_home_embeddings.py  generate_location_embeddings.py  generate_news_embeddings.py  generate_release_embeddings.py  scrape_ads.py  scrape_all_news.py  scrape_communities.py  scrape_homes.py  scrape_releases.py
frontend/: streamlit_app.py
(+10 files in other folders)
